--- a/app/styles.scss
+++ b/app/styles.scss
@@ -1,17 +1,24 @@
 $bg : #202020;
 $bg2: #505050;
-$color: white;
+$bg3: #101010;
+$text: white;
+$sm: 1.5rem;
+$md: 2.25rem;
+$lg: 3.375rem;
 
 *{
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
   display: grid;
-  grid-template-rows: 70vh 30vh;
+  grid-template-rows: 60vh 40vh;
+  justify-content: center;
   width: 100vw;
-  color: $color;
+  background-color: $bg;
+  color: $text;
 }
 
 .panel{
@@ -21,13 +28,76 @@ $color: white;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  max-width: 800px;
+
+
+  .panel-title{
+    margin-bottom: 20px;
+    font-size: $md;
+    padding: 10px;
+    border-radius: 15px;
+
+  }
+
+  .guestDiv{
+    display: inline-flex;
+    justify-content: space-between;
+    margin: 5px auto;
+    width: 80%;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: $bg3;
+    align-items: center;
+  }
+
+
+  .guestName{
+    font-size: $sm;
+    transition: 2s;
+    
+  }
+
+  .guestStatus{
+      color: lightgoldenrodyellow;
+      font-style: italic;
+      padding-top: 4px;
+    }
+
 }
 
 .controls{
   display: flex;
   padding: 20px;
-  background-color: $bg2;
+  background-color: $bg;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  max-width: 800px;
+
+input[type="text"]{
+
+  padding: 30px 20px;
+  font-size: $sm;
+  border-radius: 10px;
+  border: 2px solid $bg2;
+  background-color: $bg;
+  margin-bottom: 10px;
+  color: $text;
+}
+
+button{
+
+  padding: $sm;
+  font-size: $sm;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: $bg2;
+  color: $text;
+}
+
+
 }
