removido alterações de AI, resolvido problema de insertOrder + orderStatus

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -33,7 +33,7 @@ $lg: 3.375rem;
 
   .panel-title{
     margin-bottom: 20px;
-    font-size: $md;
+    font-size: $sm;
     padding: 10px;
     border-radius: 15px;
 
