--- a/app/styles.scss
+++ b/app/styles.scss
@@ -15,7 +15,6 @@ $lg: 3.375rem;
 .container {
   display: grid;
   grid-template-rows: 50vh 50vh;
-  justify-content: center;
   width: 100vw;
   background-color: $bg;
   color: $text;
@@ -28,7 +27,6 @@ $lg: 3.375rem;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  max-width: 800px;
 
 
   .panel-title{
@@ -57,8 +55,14 @@ $lg: 3.375rem;
     
   }
 
-  .guestStatus{
+  .orderName{
       color: lightgoldenrodyellow;
+      font-style: italic;
+      padding-top: 4px;
+    }
+
+    .orderStatus{
+      color: lightseagreen;
       font-style: italic;
       padding-top: 4px;
     }
@@ -72,7 +76,6 @@ $lg: 3.375rem;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  max-width: 800px;
 
 input[type="text"]{
 
